--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">La Marche Avec Dieu</string>
-    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_home"></string>
     <string name="lb_continuer_lecture">Continuer ma lecture</string>
     <string name="lb_partager_appli">Partager l\'application</string>
     <string name="lb_verifier_update">Vérifier la mise à jour</string>
