--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">La Marche Avec Dieu</string>
+    <string name="app_name">La marche avec Dieu</string>
     <string name="title_activity_home"></string>
     <string name="lb_continuer_lecture">Continuer ma lecture</string>
     <string name="lb_partager_appli">Partager l\'application</string>
@@ -25,7 +25,7 @@
     <string name="lb_sommaire_item_17">3) Se revêtir de l\'armure du combattant</string>
     <string name="lb_sommaire_item_18">4) Oublier le passé</string>
     <string name="lb_sommaire_item_19">CONCLUSION</string>
-    <string name="title_activity_reading">La Marche Avec Dieu</string>
+    <string name="title_activity_reading">La marche avec Dieu</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
